fixed some css and also the error in the vega update logic - removed the button wrappers around the header - the multiclick updates was not wrapped in vega-lite specific keys etc.

--- a/src/elements.css
+++ b/src/elements.css
@@ -286,10 +286,6 @@
   align-self: left;
 }
 
-.sortable {
-  /* display: inline-flex; */
-}
-
 .chart-btns {
   align-self: center;
   margin-right: 0;
